--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    kapt "org.xerial:sqlite-jdbc:3.34.0"
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
